--- a/src/assets/css/variable.less
+++ b/src/assets/css/variable.less
@@ -1,4 +1,10 @@
 :root {
-  --theme_bg_color: #000;
+  --theme_app_bg_color: #e8ffff;
   --theme_text_color: blue;
+
+  --theme_top_menu_color: #379a9a;
+  --theme_top_bg_color: #4bc1c5;
+  --theme_center_bg_color: #fff;
+  --theme_text_yellow_color: #fff4aa;
+
 }
